[package]
name = "janus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
console = "0.15.5"
glob = "0.3.1"
indicatif = "0.17.3"
serde = { version = "1.0.163", features = ["derive"]}
toml = "0.7.3"

[dev-dependencies]
spectral = "0.6.0"
