[package]
name = "saturnus"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
regex = "1.11.1"
lazy_static = "1.5.0"
mlua = { version = "0.10", features = ["lua53", "vendored", "async", "send"] }

macros = { path = "../modules/macros" }
ststd = { path = "../modules/ststd" }
