[package]
name = "saturnc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
libloading = "0.8.6"
tokio = { version = "1.44.2", features = ["full"] }

ststd = { path = "../../modules/ststd" }
saturnus = { path = "../../saturnus" }
