[package]
name = "titan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
progress_bar = "1.0.6"
rayon = "1.10.0"
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
walkdir = "2.5.0"
