[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja = "2.9.0"
mlua = { version = "0.10", features = ["lua53", "vendored", "async", "send"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
toml = "0.8.22"
lazy_static = "1.5.0"

macros = { path = "../macros" }
ststd = { path = "../ststd" }
